# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  game_logic.cpp  game_logic.h  main.cpp  ui_utils.h
